# LedControlAndSensorWebServer

./: CMakeLists.txt  README.md  htmlgen  lwipopts.h  myfs.c  webServer.c
fs/: index.ssi  script.js  style.css
